--- a/index.html
+++ b/index.html
@@ -65,15 +65,11 @@
 								<h2><a href="#">No Sidebar</a></h2>
 								<div class="row banner">
 							         <div class="banner-text">
-							            <h1 class="responsive-headline">Sunwoo Kang</h1>
-							            <h3> <span>Data Analyst</span> | <span>Software Engineer</span> | <span>Founder</span></h3>
-							            <h3><span>background pc: Himalayas by Sunwoo Kang<span></h3>
-							            <hr />
-							            <ul class="social">
+
+							            <ul class="menu">
 							               <li><a href="https://github.com/swkang73"><i class="fa fa-github"></i></a></li>
 							               <li><a href="https://www.linkedin.com/in/swkang73/"><i class="fa fa-linkedin"></i></a></li>
 							               <li><a href="mailto:swkang73@stanford.edu"><i class="fa fa-envelope"></i></a></li>
-							               <li><a href="https://join.skype.com/invite/QjGfYjfvQS1t"><i class="fa fa-skype"></i></a></li>
 							            </ul>
 							         </div>
 							      </div>
