--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -8,32 +8,57 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
 
 <body oncontextmenu ="return false;">
+    <div class="flexContainer">
+        <div class="leftSection">
+            <h2>Leaderboard</h2>
+            <ol class = leaderboard>
+                <li id="firstPlace"> </li>
+                <li id="secondPlace"> </li>
+                <li id="thirdPlace"> </li>
+                <li id="fourthPlace"> </li>
+                <li id="fifthPlace"> </li>
+                <li id="sixthPlace"> </li>
+                <li id="seventhPlace"> </li>
+                <li id="eightPlace"> </li>
+                <li id="ninthPlace"> </li>
+                <li id="tenthPlace"> </li>
+            </ol>
 
+        </div>
 
+        <div class="gameContainer" draggable: false;>
+            <h1>Welcome!</h1>
+            <h2>Minesweeper Game</h2>
 
-    <h1>Welcome!</h1>
-    <h2>Minesweeper Game</h2>
+            <img id="emoji" src="images/smile.png"/>
 
-    <img id="emoji" src="sad.png"/>
+            <div id="counters">
+                <p style="visibility:visible" id="timer">00:00:00</p>
 
-    <div>
-        <ul id="counters">
-            <li style="visibility:hidden" id="timer">00:00:00</li>
-            <!-- <li id="tileCounter"></li>  <li id="bombCounter"></li>-->
-        </ul>
+            </div>
+            <table id="grid"></table>
+
+            <p id="bombCounter">Bombs Left:</p>
+
+            <button class="button" id="diffEasy">Easy</button>  <button class="button" id="diffHard">Hard</button>  <button class="button" id="reset">Reset</button>
+
+            <footer>
+                <p>Made by: Benjamin Lee</p>
+                <a href="https://www.github.com/BenjaminLee608/Minesweeper" style="color: black"><i class="fa fa-github fa-2x" ></i></a>
+            </footer>
+
+        </div>
+        <div class="emptyBox">
+
+        </div>
     </div>
-    <table id="grid"></table>
-
-    <button class="button" id="diffEasy">Easy</button>  <button class="button" id="diffHard">Hard</button>  <button class="button" id="reset">Reset</button>
 </body>
 
-<footer>
-    <p>Made by: Benjamin Lee</p>
-    <a href="https://www.github.com/BenjaminLee608/Minesweeper" style="color: black"><i class="fa fa-github fa-2x" ></i></a>
-</footer>
+
 </html>
