Added leaderboard (only 1 so far)

--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -16,9 +16,8 @@
 <body oncontextmenu ="return false;">
     <div class="flexContainer">
         <div class="leftSection">
-            <!--
             <h2>Leaderboard</h2>
-            <ol class = leaderboard>
+            <ol class = "leaderboard">
                 <li id="firstPlace"> </li>
                 <li id="secondPlace"> </li>
                 <li id="thirdPlace"> </li>
@@ -26,11 +25,10 @@
                 <li id="fifthPlace"> </li>
                 <li id="sixthPlace"> </li>
                 <li id="seventhPlace"> </li>
-                <li id="eightPlace"> </li>
+                <li id="eighthPlace"> </li>
                 <li id="ninthPlace"> </li>
                 <li id="tenthPlace"> </li>
             </ol>
-            -->
 
         </div>
 
